# seher

./: Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: settings.json  test_codex.rs  test_copilot.rs
schemas/: settings.schema.json
scripts/: install_pkgs.sh
src/: cli.rs  lib.rs  main.rs
src/agent/: mod.rs
src/browser/: cookie_reader.rs  detector.rs  mod.rs  types.rs
src/claude/: client.rs  error.rs  mod.rs  types.rs
src/codex/: client.rs  types.rs
src/config/: mod.rs
src/copilot/: client.rs  mod.rs
src/crypto/: linux.rs  macos.rs  mod.rs  windows.rs
src/glm/: types.rs
src/kimik2/: client.rs  mod.rs  types.rs
src/kiro/: client.rs  mod.rs  types.rs
src/opencode_go/: auth.rs  local.rs
src/openrouter/: client.rs  mod.rs  types.rs
src/warp/: client.rs  mod.rs  types.rs
src/web/: mod.rs
src/zai/: client.rs  mod.rs  types.rs
