[package]
authors = ["takumi3488"]
description = "CLI tool to monitor Claude API rate limits and execute code after reset"
edition = "2024"
license = "Apache-2.0"
name = "sehercode"
repository = "https://github.com/takumi3488/seher"
version = "0.0.3"

[[bin]]
name = "seher"
path = "src/main.rs"

[lib]
name = "seher"
path = "src/lib.rs"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6.0"
pbkdf2 = { version = "0.12", features = ["simple"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
rusqlite = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["rt", "macros", "time"] }
zzsleep = "0.0.2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.0"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4.0", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Security_Cryptography"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
