[package]
authors = ["takumi3488"]
description = "CLI tool to monitor Claude API rate limits and execute code after reset"
edition = "2024"
license = "Apache-2.0"
name = "sehercode"
repository = "https://github.com/takumi3488/seher"
version = "0.0.6"

[[bin]]
name = "seher"
path = "src/main.rs"

[lib]
name = "seher"
path = "src/lib.rs"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6.0"
pbkdf2 = { version = "0.12", features = ["simple"] }
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "json",
] }
rusqlite = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["rt", "macros", "time"] }
zzsleep = "0.0.3"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.0"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "5.0", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Security_Cryptography"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = ["github"]
installers = ["shell", "homebrew"]
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
]
publish-jobs = ["homebrew"]
tap = "takumi3488/homebrew-tap"
