[package]
authors = ["takumi3488"]
description = "CLI tool to monitor Claude API rate limits and execute code after reset"
edition = "2024"
license = "Apache-2.0"
name = "sehercode"
repository = "https://github.com/smartcrabai/seher"
version = "0.0.23"

[[bin]]
name = "seher"
path = "src/main.rs"
required-features = ["browser"]

[lib]
name = "seher"
path = "src/lib.rs"

[features]
browser = [
  "dep:rusqlite",
  "dep:aes",
  "dep:aes-gcm",
  "dep:cbc",
  "dep:pbkdf2",
  "dep:sha1",
  "dep:tempfile",
  "dep:dirs",
]
default = ["browser"]

[dependencies]
aes = { version = "0.8", optional = true }
aes-gcm = { version = "0.10", optional = true }
axum = "0.8"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = { version = "6.0", optional = true }
json_comments = "0.2.2"
open = "5"
pbkdf2 = { version = "0.12", features = ["simple"], optional = true }
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "json",
] }
rusqlite = { version = "0.39", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = { version = "0.10", optional = true }
tempfile = { version = "3", optional = true }
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["rt", "macros", "time", "net"] }
zzsleep = "0.0.7"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.0"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "5.0", features = ["rt-tokio-crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Security_Cryptography"] }

[[example]]
name = "test_copilot"
required-features = ["browser"]

[[example]]
name = "test_codex"
required-features = ["browser"]

[lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
formula = "seher"

[workspace.metadata.dist]
allow-dirty = ["ci"]
cargo-dist-version = "0.31.0"
ci = ["github"]
installers = ["shell", "homebrew"]
publish-jobs = ["homebrew"]
tap = "smartcrabai/homebrew-tap"
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
]
